# dynamic_flag

./: .gitignore  LICENSE  README.md  meson.build
include/: an_hook.h  dynamic_flag.h
src/: an_hook.c  dynamic_flag.c
tests/: feature_flags.c  feature_flags.stdout.expected
